--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
   "_args": [
     [
-      "react-native-secharts@1.7.0",
+      "react-native-secharts-pro@1.1.0",
       "/Users/zhangguosu/Desktop/MergeBoth/fqbApp/fullgoalApp"
     ]
   ],
-  "_from": "react-native-secharts@1.7.0",
-  "_id": "react-native-secharts@1.7.0",
+  "_from": "react-native-secharts-pro@1.1.0",
+  "_id": "react-native-secharts-pro@1.1.0",
   "_inBundle": false,
   "_integrity": "sha1-Dc0VBPhzx/HUD/9IZmuur3Tm48Y=",
-  "_location": "/react-native-secharts",
+  "_location": "/react-native-secharts-pro",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "react-native-secharts@1.7.0",
-    "name": "react-native-secharts",
-    "escapedName": "react-native-secharts",
-    "rawSpec": "1.7.0",
+    "raw": "react-native-secharts-pro@1.1.0",
+    "name": "react-native-secharts-pro",
+    "escapedName": "react-native-secharts-pro",
+    "rawSpec": "1.1.0",
     "saveSpec": null,
-    "fetchSpec": "1.7.0"
+    "fetchSpec": "1.1.0"
   },
   "_requiredBy": [
     "/"
   ],
   "_resolved": "https://registry.npm.taobao.org/react-native-secharts/download/react-native-secharts-1.7.0.tgz",
-  "_spec": "1.7.0",
+  "_spec": "1.1.0",
   "_where": "/Users/zhangguosu/Desktop/MergeBoth/fqbApp/fullgoalApp",
   "author": {
     "name": "haise"
   },
   "bugs": {
-    "url": "https://github.com/shifeng1993/react-native-secharts/issues"
+    "url": "https://github.com/jiangsongh/react-native-secharts-pro/issues"
   },
   "dependencies": {
     "prop-types": "^15.7.2"
   },
   "description": "reactnative的echarts组件",
-  "homepage": "https://github.com/shifeng1993/react-native-secharts#readme",
+  "homepage": "https://github.com/jiangsongh/react-native-secharts-pro/blob/main/README.md",
   "keywords": [
     "react-native-secharts",
     "react-native-echarts",
@@ -50,10 +50,10 @@
   "name": "react-native-secharts",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shifeng1993/react-native-secharts.git"
+    "url": "git+https://github.com/jiangsongh/react-native-secharts-pro"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.7.0"
+  "version": "1.1.0"
 }
